--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=AsyncElegantOTA
-version=2.2.9
+version=2.3.0
 author=Ayush Sharma
 category=Communication
-maintainer=Ayush Sharma <asrocks5@gmail.com>
-sentence=Deprecated: Migrate to EleganOTA v3. More info in repository README.
-paragraph=Deprecated: Migrate to ElegantOTA v3. More info in repository README.
-url=https://github.com/ayushsharma82/AsyncElegantOTA
+maintainer=Vincent MANOUKIAN <manoukianv@gmail.com>
+sentence=Fork maintainer for the MIT release befor migration.
+paragraph=Fork maintainer for the MIT release befor migration.
+url=https://github.com/manoukianv/AsyncElegantOTA
 architectures=esp8266,esp32
